docs/api/qiskit/0.41/qiskit.synthesis.QDrift.mdx
---
title: QDrift (v0.41)
description: API reference for qiskit.synthesis.QDrift in qiskit v0.41
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.synthesis.QDrift
---

# QDrift

<Class id="qiskit.synthesis.QDrift" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.23/qiskit/synthesis/evolution/qdrift.py" signature="QDrift(reps=1, insert_barriers=False, cx_structure='chain', atomic_evolution=None)" modifiers="class">
  Bases: [`qiskit.synthesis.evolution.product_formula.ProductFormula`](qiskit.synthesis.ProductFormula "qiskit.synthesis.evolution.product_formula.ProductFormula")

  The QDrift Trotterization method, which selects each each term in the Trotterization randomly, with a probability proportional to its weight. Based on the work of Earl Campbell in Ref. \[1].

  **References**

  \[1]: E. Campbell, “A random compiler for fast Hamiltonian simulation” (2018). [arXiv:quant-ph/1811.08017](https://arxiv.org/abs/1811.08017)

  **Parameters**

  *   **reps** (`int`) – The number of times to repeat the Trotterization circuit.
  *   **insert\_barriers** (`bool`) – Whether to insert barriers between the atomic evolutions.
  *   **cx\_structure** (`str`) – How to arrange the CX gates for the Pauli evolutions, can be “chain”, where next neighbor connections are used, or “fountain”, where all qubits are connected to one.
  *   **atomic\_evolution** (`Optional`\[`Callable`\[\[`Union`\[[`Pauli`](qiskit.quantum_info.Pauli "qiskit.quantum_info.operators.symplectic.pauli.Pauli"), [`SparsePauliOp`](qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.operators.symplectic.sparse_pauli_op.SparsePauliOp")], `float`], [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]]) – A function to construct the circuit for the evolution of single Pauli string. Per default, a single Pauli evolution is decomopsed in a CX chain and a single qubit Z rotation.

  ## Methods

  <span id="qiskit-synthesis-qdrift-synthesize" />

  ### synthesize

  <Function id="qiskit.synthesis.QDrift.synthesize" signature="QDrift.synthesize(evolution)">
    Synthesize an `qiskit.circuit.library.PauliEvolutionGate`.

    **Parameters**

    **evolution** ([*PauliEvolutionGate*](qiskit.circuit.library.PauliEvolutionGate "qiskit.circuit.library.PauliEvolutionGate")) – The evolution gate to synthesize.

    **Returns**

    A circuit implementing the evolution.

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
  </Function>

  ## Attributes

  ### settings

  <Attribute id="qiskit.synthesis.QDrift.settings">
    Return the settings in a dictionary, which can be used to reconstruct the object.

    **Return type**

    `Dict`\[`str`, `Any`]

    **Returns**

    A dictionary containing the settings of this product formula.

    **Raises**

    **NotImplementedError** – If a custom atomic evolution is set, which cannot be serialized.
  </Attribute>
</Class>

